# trading-deepagent

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
infra/: Dockerfile.api  Dockerfile.worker
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: refresh_nse_universe.py  start_local.sh  stop_local.sh
src/app/: cli.py  config.py  constants.py  contracts.py  logging_config.py
src/app/agents/: behavioral_agent.py  execution_agent.py  fundamental_agent.py  investment_allocation.py  macro_agent.py  main.py  orchestrate.py  research_agent.py  risk_management_agent.py  technical_agent.py  volatility_agent.py
src/app/agents/behavioral_agent/agents/: psychological_profile.py  risk_management.py  trade_plan.py
src/app/agents/behavioral_agent/config/: settings.py
src/app/agents/models/: types.py
src/app/agents/portfolio_orchestrator/: __init__.py  main.py  query_processor.py  workflow_builder.py  workflow_nodes.py
src/app/api/: job_store.py  main.py
src/app/backtest/: run.py
src/app/config/: __init__.py  env.py  validate_env.py
src/app/core/: cache.py  constants.py  logging.py  yfinance_utils.py
src/app/data/: nse_universe.csv
src/app/db/: models.py  repository.py  session.py
src/app/kg/: neo4j_client.py
src/app/storage/: file_store.py  postgres_client.py
tests/: conftest.py
tests/integration/: test_workflow_builder.py
tests/unit/: test_bias_analysis.py  test_risk_math.py  test_strategy_agent.py  test_technical_data.py
(+73 files in other folders)
