[project]
name = "multiagent-trading"
version = "0.1.0"
description = "Multi-agent stock trading CLI with DAG and KG"
authors = [
    {name = "harshitakumai-dev",email = "harshitakumari344@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "click (>=8.3.0,<9.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "neo4j (>=5.28.2,<6.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "vectorbt (>=0.28.1,<0.29.0)",
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn (>=0.36.0,<0.37.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.18.2,<2.0.0)"
]
